media/css/zamboni/discovery-pane.css
/* ... */
h2 {
    font-size: 18px;
}

h3 {
    font-size: 16px;
}

a:link, a:visited {
    color: #144fae;
    text-decoration: none;
}

a:hover, a:focus, a:active {
    color: #083681;
    text-decoration: underline;
}

.hidden {
    position: absolute;
    top: -100000px;
}

section > section {
    background: rgba(255,255,255,0.35) no-repeat;
    border: 1px solid #a8b8d1;
    box-shadow: inset 0 1px 3px rgba(58,78,103,0.15), 0 1px 0 rgba(255,255,255,0.5);
}

#main {
    width: 75%;
    float: left;
}

.html-rtl #main {
    float: right;
}

#main > section,
#sub > section {
    padding: 10px;
    margin: 0 0 10px;
    border-radius: 8px;
}

#sub {
    width: 24%;
    float: right;
}

.html-rtl #sub {
    float: left;
}

.pane header {
    border: 1px solid #a8b8d1;
    border-bottom-width: 0;
    border-radius: 8px;
    background: -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
    box-shadow: inset 0 -3px 0 rgba(58,78,103,0.05), 0 3px 0 rgba(175,195,220,.3);
    margin-bottom: 10px;
}

.pane #right-module {
    display: none;
}

.detail header {
    margin-bottom: 20px;
}

.recs header {
    float: right;
    margin-top: -1px;
    width: 24%;
    width: -moz-calc(24% - 2px);
}

.html-rtl .recs header {
    float: left;
}

/* @Clear floats *********/
body:after,
header:after,
.addons:after {
    content: ".";
    display: block;
    clear: both;
    height: 0;
    visibility: hidden;
}

/* @Introduction *********/
#intro {
    position: relative;
    width: 71%;
    float: left;
    padding: 10px 2.25%;
    border-right: 1px inset rgba(0,0,0,0.25);
    margin: 0;
}

.html-rtl #intro {
    float: right;
    border-right: 0;
    border-left: 1px inset rgba(0,0,0,0.25);
}

.recs #intro {
    display: none;
}

#intro h1 {
    margin: .5em 0 .25em;
    clear: right;
}

#intro h1 img {
    float: left;
    margin: 10px 20px;
}

.html-rtl #intro h1 img {
    float: right;
}

#intro p {
    position: relative;
    padding-right: 140px;
}

.html-rtl #intro p {
    padding: 0 0 0 120px;
}

#intro .button {
    position: absolute;
    right: 0;
    top: 0;
    max-width: 100px;
}

.html-rtl #intro .button {
    right: auto;
    left: 0;
}

/* @group Recommendations */
#main #recs {
    display: none;
    margin-bottom: 0;
    min-height: 200px;
    padding: 0;
    position: relative;
}
.recs #main #recs {
    display: block;
}

#recs .gallery-wrap {
    background-color: #d4edea;
    border-radius: 0 0 8px 8px;
    position: relative;
}

#recs .msg {
    display: table;
    height: 160px;
    width: 100%;
}
#recs .msg p {
    display: table-cell;
    font-size: 15px;
    line-height: 1.3;
    text-align: center;
    vertical-align: middle;
}
#recs .loading p {
    margin-bottom: 0;
    padding-top: 78px;
}
#recs .loading p > span {
    background: url(../../img/zamboni/discovery_pane/loading.gif) no-repeat;
    display: inline-block;
    opacity: 0.25;
    height: 48px;
    position: absolute;
    top: 73px;
    left: 50%;
    left: -moz-calc(50% - 24px);
    width: 48px;
}
/* @end */

/* @Mission, @My-account *********/
#mission, #my-account {
    margin: 0 0 0 -10px;
    padding: 10px;
    float: right;
    width: 22%;
    width: -moz-calc(24% - 22px);
    border-radius: 8px;
}

.recs #mission {
    background: -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
}

#my-account {
    background:
        url(../../img/zamboni/discovery_pane/bg-home.png) no-repeat 100% 100%,
        -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
    border-radius: 0 8px 8px 0;
}
.no-recs header.auth {
    background:
        url(../../img/zamboni/discovery_pane/bg-home.png) no-repeat 100% -moz-calc(100% - 3px),
        -moz-linear-gradient(top, #fff 0, #ecf1f7 100%);
}
.no-recs #my-account {
    background: none;
    padding-bottom: 0;
}
.recs #mission,
.recs #my-account {
    border-left-width: 0;
    border-radius: 8px;
    float: left;
    margin-left: 0;
    padding-left: 10px;
    width: -moz-calc(100% - 20px);
}

.html-rtl #mission,
.html-rtl #my-account {
    float: left;
}

.html-rtl .recs #mission,
.html-rtl .recs #my-account {
    float: right;
}

#mission p,
#my-account p {
    font-size: 15px;
    line-height: 1.1;
}

#mission p,
#my-account p,
#my-account ul {
    margin-bottom: 0.5em;
}

#my-account ul {
    color: #76787b;
    line-height: 1.5;
    list-style: disc inside;
}

#my-account p#logout {
    font-size: 11px;
    margin: 0 0 0 13px;
}

#mission a,
#mission strong,
#my-account strong {
    font-weight: bold;
}

#mission #download-count {
    font-size: 1em;
}

/* @Main @Feature *********/
#main #main-feature {
    display: none;
    position: relative;
    padding: 0;
    background: transparent;
    border: 0;
    box-shadow: none;
}

.feature {
    background: rgba(255,255,255,0.35) no-repeat;
    border: 1px solid #a8b8d1;
    box-shadow: inset 0 1px 3px rgba(58,78,103,0.15), 0 1px 0 rgba(255,255,255,0.5);
    margin-bottom: 10px;
    min-height: 240px;
    padding: 10px 9%;
    border-radius: 8px;
}

#main #featured-addons {
    margin-top: 283px;
}
#main #main-feature.js + #featured-addons {
    margin-top: 0;
}

#main #main-feature.js {
    height: 273px;
    overflow: hidden;
}

#main-feature.js .feature {
    height: 251px;
    position: relative;
    overflow: hidden;
    box-shadow: none;
}

.slider {
    white-space:nowrap;
    position: relative;
    left: 0;
    -moz-transition-duration: .3s;
    -moz-transition-property: left, right;
    -webkit-transition-duration: .3s;
    -webkit-transition-property: left, right;
}

.slider.noslide {
    -moz-transition: none;
    -webkit-transition: none;
}

.slider > li {
    width: 100%;
    white-space: normal;
    display: inline-block;
    vertical-align: top;
    top: 0;
}

#nav-features,
#nav-recs {
    height: 0;
    margin: 0;
    display: none;
    position: relative;
}

#main-feature.js #nav-features,
.recs #recs #nav-recs.js {
    display: block;
}
/* ... */

